--- a/index.html
+++ b/index.html
@@ -2,7 +2,12 @@
 <html>
     <head>
         <title></title>
+        <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
+        <video autoplay muted loop id=bgvid>
+            <source src="assets/gravity.mp4" type="video/mp4">
+            <source src="assets/gravity.mp4" type="video/ogg">
+        </video>
     </body>
 </html>
