added dummy nav barand styles

--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
         <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
+        <nav>
+            <ul>
+                <li>WELl</li>
+                <li>WELl</li>
+                <li>WELl</li>
+                <li>WELl</li>
+            </ul>
+        </nav>
+        <hr>
+
         <video autoplay muted loop id=bgvid>
             <source src="assets/gravity.mp4" type="video/mp4">
             <source src="assets/gravity.mp4" type="video/ogg">
