--- a/index.html
+++ b/index.html
@@ -7,17 +7,33 @@
     <body>
         <nav>
             <ul>
-                <li>WELl</li>
-                <li>WELl</li>
-                <li>WELl</li>
-                <li>WELl</li>
+                <li><a href="#">HOME</a></li>
+                <li><a href="#">VIDEOS</a></li>
+                <li><a href="#">GALLERY</a></li>
+                <li><a href="#">APP</a></li>
+                <li><a href="#">DOWNLOADS</a></li>
+                <li><a href="#">SWEEPSTAKES</a></li>
+                <li><a href="#">SPECIAL FEATURES</a></li>
             </ul>
         </nav>
-        <hr>
+        <hr class="line">
 
         <video autoplay muted loop id=bgvid>
             <source src="assets/gravity.mp4" type="video/mp4">
             <source src="assets/gravity.mp4" type="video/ogg">
         </video>
+        <div class="card aside">
+            <div class="txt">
+                <p>Gravity shows is the glory of cinema's future</p>
+                <p>Richard Coliss/ TIME</p>
+                <hr class="line">
+            </div>
+            <div class="actors">
+                <div class="sandra">
+                </div>
+                <div class="clooney">
+                </div>
+            </div>
+        </div>
     </body>
 </html>
