--- a/index.html
+++ b/index.html
@@ -3,35 +3,47 @@
     <head>
         <title></title>
         <link rel="stylesheet" href="css/main.css">
+        <script src="http://use.edgefonts.net/abel:n4:all.js"></script>
     </head>
     <body>
-        <nav>
-            <ul>
-                <li><a href="#">HOME</a></li>
-                <li><a href="#">VIDEOS</a></li>
-                <li><a href="#">GALLERY</a></li>
-                <li><a href="#">APP</a></li>
-                <li><a href="#">DOWNLOADS</a></li>
-                <li><a href="#">SWEEPSTAKES</a></li>
-                <li><a href="#">SPECIAL FEATURES</a></li>
-            </ul>
-        </nav>
-        <hr class="line">
+        <div class="body-wrapper">
+            <nav>
+                <ul>
+                    <li><a href="#">HOME</a></li>
+                    <li><a href="#">VIDEOS</a></li>
+                    <li><a href="#">GALLERY</a></li>
+                    <li><a href="#">APP</a></li>
+                    <li><a href="#">DOWNLOADS</a></li>
+                    <li><a href="#">SWEEPSTAKES</a></li>
+                    <li><a href="#">SPECIAL FEATURES</a></li>
+                </ul>
+            </nav>
+            <hr class="line">
 
-        <video autoplay muted loop id=bgvid>
-            <source src="assets/gravity.mp4" type="video/mp4">
-            <source src="assets/gravity.mp4" type="video/ogg">
-        </video>
-        <div class="card aside">
-            <div class="txt">
-                <p>Gravity shows is the glory of cinema's future</p>
-                <p>Richard Coliss/ TIME</p>
-                <hr class="line">
-            </div>
-            <div class="actors">
-                <div class="sandra">
+            <video autoplay muted loop id=bgvid>
+                <source src="assets/gravity.mp4" type="video/mp4">
+                <source src="assets/gravity.mp4" type="video/ogg">
+            </video>
+            <div class="card aside">
+                <div class="txt">
+                    <p>Gravity shows is the glory of cinema's future</p>
+                    <p>Richard Coliss/ TIME</p>
+                    <hr class="line">
                 </div>
-                <div class="clooney">
+                <div class="actors">
+                    <div class="sandra">
+                        <p>SANDRA<br>BULLOCK</p>
+                    </div>
+                    <div class="clooney">
+                        <p>GEORGE<br>CLOONEY</p>
+                    </div>
+                </div>
+                <div class="middle-text">
+                    <p>FROM DIRECTOR ALFANSO CUARON</p>
+                    <h1>GRAVITY</h1>
+                    <p>SET IN REAL 3D AND IMAX3D</p>
+                    <p>11.7.13</p>
+                    <a href="#">INITIATE SPACEWALK<br>3D WEBGL EXPERIENCE</a>
                 </div>
             </div>
         </div>
