styling the card

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <h1>GRAVITY</h1>
                     <p>SET IN REAL 3D AND IMAX3D</p>
                     <p>11.7.13</p>
-                    <a href="#">INITIATE SPACEWALK<br>3D WEBGL EXPERIENCE</a>
+                    <div class="link"><a href="#" >INITIATE SPACEWALK<br>3D WEBGL EXPERIENCE</a></div>
                 </div>
             </div>
         </div>
