styling the navigation and hover

--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
         <div class="body-wrapper">
             <nav>
                 <ul>
-                    <li><a href="#">HOME</a></li>
+                    <li>
+                        <a href="#">HOME<div class="back"></div>
+                        </a>
+
+                    </li>
                     <li><a href="#">VIDEOS</a></li>
                     <li><a href="#">GALLERY</a></li>
                     <li><a href="#">APP</a></li>
