styling the content area

--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
                     <p>Richard Coliss/ TIME</p>
                     <hr class="line">
                 </div>
-                <div class="actors">
-                    <div class="sandra">
+                <ul class="actors">
+                    <li>
                         <p>SANDRA<br>BULLOCK</p>
-                    </div>
-                    <div class="clooney">
+                    </li>
+                    <li>
                         <p>GEORGE<br>CLOONEY</p>
-                    </div>
-                </div>
+                    </li>
+                </ul>
                 <div class="middle-text">
                     <p>FROM DIRECTOR ALFANSO CUARON</p>
                     <h1>GRAVITY</h1>
