editing content area

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <h1>GRAVITY</h1>
                     <p>SET IN REAL 3D AND IMAX3D</p>
                     <p>11.7.13</p>
-                    <div class="link"><a href="#" >INITIATE SPACEWALK<br>3D WEBGL EXPERIENCE</a></div>
+                    <div class="link"><a href="#" ><span>INITIATE SPACEWALK</span><br><span class="small">3D WEBGL EXPERIENCE</span></a></div>
                 </div>
             </div>
         </div>
