fine tuning content

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
                 </div>
                 <ul class="actors">
                     <li>
-                        <p>SANDRA<br>BULLOCK</p>
+                        <p class="san">SANDRA<br>BULLOCK</p>
                     </li>
                     <li>
-                        <p>GEORGE<br>CLOONEY</p>
+                        <p class="geo">GEORGE<br>CLOONEY</p>
                     </li>
                 </ul>
                 <div class="middle-text">
