--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title></title>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+        <title>Gravity</title>
         <link rel="stylesheet" href="css/main.css">
         <script src="http://use.edgefonts.net/abel:n4:all.js"></script>
     </head>
@@ -50,6 +51,22 @@
                     <div class="link"><a href="#" ><span>INITIATE SPACEWALK</span><br><span class="small">3D WEBGL EXPERIENCE</span></a></div>
                 </div>
             </div>
+            <footer>
+                <ul>
+                    <li>
+                        FOLLOW US ON
+                    </li>
+                    <li>
+                        <i class="fa fa-facebook fa-lg"></i>
+                    </li>
+                    <li>
+                        <i class="fa fa-twitter fa-lg"></i>
+                    </li>
+                    <li>
+                        <i class="fa fa-tumblr"></i>
+                    </li>
+                </ul>
+            </footer>
         </div>
     </body>
 </html>
