--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
     <head>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
         <title>Gravity</title>
+        <!--<link rel="stylesheet" href="css/reset.css">-->
+        <link rel="stylesheet" href="css/screen.css">
         <link rel="stylesheet" href="css/main.css">
         <script src="http://use.edgefonts.net/abel:n4:all.js"></script>
     </head>
     <body>
+        <div id="wrapper">
         <div class="body-wrapper">
             <nav>
                 <ul>
@@ -25,10 +28,10 @@
             </nav>
             <hr class="line">
 
-            <video autoplay muted loop id=bgvid>
+         <!--   <video autoplay muted loop id=bgvid>
                 <source src="assets/gravity.mp4" type="video/mp4">
                 <source src="assets/gravity.mp4" type="video/ogg">
-            </video>
+            </video>-->
             <div class="card aside">
                 <div class="txt">
                     <p>Gravity shows is the glory of cinema's future</p>
@@ -51,7 +54,9 @@
                     <div class="link"><a href="#" ><span>INITIATE SPACEWALK</span><br><span class="small">3D WEBGL EXPERIENCE</span></a></div>
                 </div>
             </div>
-            <footer>
+           
+        </div>
+         <footer>
                 <ul>
                     <li>
                         FOLLOW US ON
@@ -67,6 +72,9 @@
                     </li>
                 </ul>
             </footer>
-        </div>
+            </div>
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js" ></script>
+	<script src="js/jquery.tubular.1.0.js"></script>
+    <script src="js/index.js"></script>
     </body>
 </html>
